# mjhoy.com

./: .gitignore  Bike.hs  DEPLOYING  HACKING  Journal.hs  LICENSE  Main.hs  Makefile  MyCompilers.hs  Post.hs  README  Static.hs  Writings.hs  about.md  blog.cabal  cabal.project.freeze  configure-dev  default.nix  deploy.example  index.markdown  photo.markdown  portfolio.markdown  resume.html  shell-osx.nix  shell.nix
bike/: barnet.markdown  disc-golf.markdown  granny-gears.markdown  index.markdown  niagara.markdown  ohio.markdown  saranac.markdown  winooski.markdown
journal/2010/07/: symmetry.css  symmetry.html
journal/2011/07/: mcas.css  mcas.html
journal/2013/04/: costarica_min_topo.json  cr_shaded_relief.css  cr_shaded_relief.js  cr_shaded_relief.org  visualizing_quicksort.css  visualizing_quicksort.html  visualizing_quicksort.js
journal/2016/02/: Makefile  default.nix  foo.c  foo.h  joy-of-linux.org  main.c  nix-glibc-2.org  nix-glibc.org  nix.org
js/bike/: main.js
js/mcas/: g10_all.json  ma_district_geometry.json  mass-geo.json  mcas.js  mcas_bydist_gr10_all.json
js/symm/: _article.js
photo/: fells.markdown  thisthat45.markdown
posts/: mcas.html  symmetry.html
stylesheets/: _bike.scss  _photo.scss  _resume.scss  _writing.scss  about.css  journal.css  main-2.css  main-old.css  main.css  main.scss
templates/: bike.html  default.html  index.html  journal.html  layout.html  page.html  photo.html  portfolio.html  writing.html
writings/misc/: catalunya.md
writings/west/: week1.md  week2.md  week3.md  week4.md
