cabal-version:       3.0

name:                blog
version:             0.1.0.0
build-type:          Simple

synopsis:            mjhoy.com website
description:         mjhoy.com website
homepage:            http://mjhoy.com
license:             MIT
license-file:        LICENSE

category:            Web
author:              Michael Hoy
maintainer:          mjh@mjhoy.com

executable blog
  main-is:           Main.hs
  other-modules:     Bike
                   , Journal
                   , Post
                   , Static
                   , Writings
  build-depends:     base ==4.*
                   , hakyll ==4.*
                   , lens >=4.16
                   , containers >=0.5.10
                   , pandoc >=1.16
                   , filepath >=1.4
                   , time >=1.6
                   , time-locale-compat >=0.1
                   , hxt >=9.3
